--- a/process_test/https_20190709/test_case/pytest.ini
+++ b/process_test/https_20190709/test_case/pytest.ini
@@ -1,7 +1,10 @@
-[pytest]
+; [pytest]
 ;xfail_strict = true
 ;addopts = -v -s --html=report.html
 ;markers =
 ;  hello: Run the hello case momently
 ;  allure.feature:my mark
+[config]
+redis=172.18.2.199
 
+gateNoList=19,20,21
