--- a/testcase.ini
+++ b/testcase.ini
@@ -1,9 +1,9 @@
 [Product]
-env = win7_64
-
+name = 动态布控
 
 [Modular]
-
-
+name = 数据平台
 
 [TestCase]
+name = 人脸识别记录-列表-条件查询,人脸识别记录-详情,系统安检通过-系统复核通过-系统登机口复核通过,
+
