--- a/testcase.ini
+++ b/testcase.ini
@@ -3,7 +3,8 @@ name = 动态布控
 
 [Modular]
 name = 数据平台
+id = 4,6,
 
 [TestCase]
-name = 人脸识别记录-列表-条件查询,人脸识别记录-详情,系统安检通过-系统复核通过-系统登机口复核通过,
+name = 系统安检通过-系统复核通过-系统登机口复核通过,
 
