增加多线程发送邮件

--- a/process_test/https_20190709/test_case/pytest.ini
+++ b/process_test/https_20190709/test_case/pytest.ini
@@ -1,10 +1,8 @@
-; [pytest]
-;xfail_strict = true
-;addopts = -v -s --html=report.html
-;markers =
-;  hello: Run the hello case momently
-;  allure.feature:my mark
 [config]
-redis=172.18.2.199
+data = 2020-05-26
+flight = CZ6182
+redis = 172.18.2.199
+gatenolist = 19,20,21
+idx_feature = 742
+lk_bdno = 003
 
-gateNoList=19,20,21
