修改了框架的bug

--- a/process_test/https_20190709/test_case/pytest.ini
+++ b/process_test/https_20190709/test_case/pytest.ini
@@ -1,8 +1,8 @@
 [config]
-data = 2020-05-26
-flight = CZ6182
+data = 2020-05-29
+flight = A67302
 redis = 172.18.2.199
 gatenolist = 19,20,21
-idx_feature = 742
-lk_bdno = 003
+idx_feature = 726
+lk_bdno = 001
 
