settings.py去掉 os.path.join(BASE_DIR, 'report')

--- a/testbed.ini
+++ b/testbed.ini
@@ -6,8 +6,8 @@ name = 数据平台
 id = 5,
 
 [TestCase]
-name = 人员回查接口,
-id = [20]
+name = 系统安检-系统复核-人脸复核登机,系统安检-系统复核-刷票快速登机,人员回查接口,系统安检-系统复核-刷证快速登机,系统安检-系统复核-登机口人工放行,
+id = [8, 19, 20, 21, 22]
 
 [Url]
 host = 192.168.1.42
