增加了个html页面

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,18 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
+
+        {
+            "type": "chrome",
+            "request": "launch",
+            "name": "Launch Chrome",
+            "url": "http://localhost:8010",
+            "webRoot": "${workspaceFolder}",
+            "file": "${workspaceRoot}/templates\\testcase_manage\\test.js"
+        },
+
+
         {
             "name": "Python: 当前文件",
             "type": "python",
