--- a/testbed.ini
+++ b/testbed.ini
@@ -1,13 +1,13 @@
 [Product]
-name = 呼和浩特机场
+name = 动态布控
 
 [Modular]
 name = 数据平台
-id = 5,
+id = 4,
 
 [TestCase]
-name = 系统安检-系统复核-人脸复核登机,系统安检-系统复核-刷票快速登机,人员回查接口,系统安检-系统复核-刷证快速登机,系统安检-系统复核-登机口人工放行,
-id = [8, 19, 20, 21, 22]
+name = 人脸识别记录-列表-条件查询,人脸识别记录-详情,
+id = [6, 7]
 
 [Url]
 host = 192.168.1.42
