--- a/process_test/https_20190709/test_case/pytest.ini
+++ b/process_test/https_20190709/test_case/pytest.ini
@@ -1,6 +1,6 @@
 [config]
-data = 2020-06-05
-flight = 9D5671
+data = 2020-06-12
+flight = FU6628
 redis = 172.18.2.199
 gatenolist = 19,20,21
 idx_feature = 703
